--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'jacoco'
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
