--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,14 +13,12 @@ android {
     }
     buildTypes {
         debug {
+            runProguard false
             debuggable true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             testCoverageEnabled true
         }
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+        
     }
 }
 
