--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,14 @@ dependencies {
     testCompile 'org.robolectric:robolectric:3.0'
 
 }
+android.testOptions.unitTests.all {
+    // configure the set of classes for JUnit tests
+    include '**/*Test.class'
+    //exclude '**/espresso/**/*.class'
+
+    // configure max heap size of the test JVM
+    maxHeapSize = "2048m"
+}
 apply plugin: "jacoco"
 
 jacoco {  
