--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+  repositories {
+    mavenLocal()
+    mavenCentral()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:0.12.+'
+    classpath 'org.robolectric:robolectric-gradle-plugin:0.11.+'
+  }
+}
 apply plugin: 'com.android.application'
 apply plugin: 'jacoco'
 android {
