--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,3 +98,8 @@ task hello {
         println 'Hello world!'
     }
 }
+jacocoTestReport2 {
+   group = "Reporting"
+   description = "Generate Jacoco coverage reports after running tests."
+   additionalSourceDirs = files(sourceSets.main.allJava.srcDirs)
+}
