--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ allprojects {
 }
 
 apply plugin: 'com.android.application'
-
+apply plugin: 'jacoco'
 android {
     compileSdkVersion 23
     buildToolsVersion '21.1.2'
@@ -88,37 +88,18 @@ android.testOptions.unitTests.all {
     maxHeapSize = "2048m"
 }
 
-apply plugin: 'jacoco'
+
 
 jacoco {
     toolVersion = "0.7.1.201405082137"
+    reportsDir = file("$buildDir/customJacocoReportDir")
 }
 
-def coverageSourceDirs = [
-        '../app/src/main/java'
-]
-
-task jacocoTestReport(type: JacocoReport, dependsOn: "testDebug") {
-    group = "Reporting"
-
-    description = "Generate Jacoco coverage reports"
-
-    classDirectories = fileTree(
-            dir: '../app/build/intermediates/classes/debug',
-            excludes: ['**/R.class',
-                       '**/R$*.class',
-                       '**/*$ViewInjector*.*',
-                       '**/BuildConfig.*',
-                       '**/Manifest*.*']
-    )
-
-    additionalSourceDirs = files(coverageSourceDirs)
-    sourceDirectories = files(coverageSourceDirs)
-    executionData = files('../app/build/jacoco/testDebug.exec')
-
-    reports {
-        xml.enabled = true
-        html.enabled = true
+test {
+    jacoco {
+        append = false
+        destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+        classDumpFile = file("$buildDir/jacoco/classpathdumps")
     }
-
 }
+
