--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,7 @@ jacoco {
     reportsDir = file("$buildDir/customJacocoReportDir")
 }
 
-test {
+androidTest {
     jacoco {
         append = false
         destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
