--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,10 @@ allprojects {
 
 apply plugin: 'com.android.application'
 apply plugin: 'jacoco'
-   jacoco {
-        toolVersion = "0.7.1.201405082137"
-        reportsDir = file("$buildDir/customJacocoReportDir")
-    }
+jacoco {
+    toolVersion = "0.7.1.201405082137"
+    reportsDir = file("$buildDir/customJacocoReportDir")
+}
 android {
     compileSdkVersion 23
     buildToolsVersion '21.1.2'
@@ -85,66 +85,17 @@ dependencies {
 
 }
 
-android.testOptions.unitTests.all {
-    // configure the set of classes for JUnit tests
-    include '**/*Test.class'
-    //exclude '**/espresso/**/*.class'
-
-    // configure max heap size of the test JVM
-    maxHeapSize = "2048m"
-}
-
-
-
-
-apply plugin: "jacoco"
-
-// Define coverage source.
-// If you have rs/aidl etc... add them here.
-def coverageSourceDirs = [  
-        'src/main/java',
-        'src/gen'
-]
-
-// This differs per what flavors buildTypes etc. 
-// But this example shows the 'testDebug'
-// which is standard for Robolectric
-task jacocoTestReport(type: JacocoReport, dependsOn: "testDebug") {  
-    group = "Reporting"
-    description = "Generate Jacoco coverage reports after running tests."
-    reports {
-        xml.enabled = true // coveralls plugin depends on xml format report
-        html.enabled = true
-    }
-    // class R is used, but usage will not be covered, so ignore this class from report
-    // This differs per plugin version (0.10 -> 0.11) 
-    // have very different fileTrees.
-    // I have added rules to Ignore Dagger/Butterknife
-    classDirectories = fileTree(
-            dir: './build/intermediates/classes/debug',
-            excludes: ['com/myapp/R*.class',
-                       '**/*$InjectAdapter.class',
-                       '**/*$ModuleAdapter.class',
-                       '**/*$ViewInjector*.class'
-            ])
-    sourceDirectories = files(coverageSourceDirs)
-    executionData = files('build/jacoco/testDebug.exec')
-    // Bit hacky but fixes https://code.google.com/p/android/issues/detail?id=69174.
-    // We iterate through the compiled .class tree and rename $$ to $. 
-    doFirst {
-        new File('myapp/build/intermediates/classes/').eachFileRecurse { file ->
-            if (file.name.contains('$$')) {
-                file.renameTo(file.path.replace('$$', '$'))
-            }
-        }
-    }
-     
-}
-
-task jacocoTestReport2 {
+task jacocoTestReport {
     reports {
         xml.enabled false
         csv.enabled false
         html.destination "${buildDir}/jacocoHtml"
+    }
+}
+test {
+    jacoco {
+        append = false
+        destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+        classDumpFile = file("$buildDir/jacoco/classpathdumps")
     }
 }
